--- a/HTMLclass-1.html
+++ b/HTMLclass-1.html
@@ -1,4 +1,4 @@
-Below is a snippet of HTML that we'll use as a starting point to create a webpage. 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +10,7 @@ Below is a snippet of HTML that we'll use as a starting point to create a webpag
 </head>
 <body>
     <!--start div 1-->
-    <div class="col1 Column" id="one">
+    <div class="col1 column" id="one">
        
         <h1 class="tittle"> My First Heading</h1>
         <img src="uiw.jpeg" alt="UIW!!!!!!">
@@ -19,7 +19,7 @@ Below is a snippet of HTML that we'll use as a starting point to create a webpag
    
     </div>
  <!--start div 2-->
-    <div class="col1 Column" id="one">
+    <div class="col1 column" id="one">
         <h2>My First Heading</h1>
         <h3>This is a sub heading</h2>
         <p>My first paragraph.</p>
