--- a/HTMLclass-1.html
+++ b/HTMLclass-1.html
@@ -9,6 +9,13 @@
 <!--this is a comment-->
 </head>
 <body>
+    <section class="hero">
+        <div class="intro" >
+         <h1>welcome to my page</h1>
+         <a href="#">contaact me</a>
+        </div>
+
+    </section>
     <!--start div 1-->
     <div class="col1 column" id="one">
        
@@ -19,7 +26,7 @@
    
     </div>
  <!--start div 2-->
-    <div class="col1 column" id="one">
+    <div class="col2 column">
         <h2>My First Heading</h1>
         <h3>This is a sub heading</h2>
         <p>My first paragraph.</p>
