class sep12 changes

--- a/HTMLclass-1.html
+++ b/HTMLclass-1.html
@@ -9,6 +9,18 @@
 <!--this is a comment-->
 </head>
 <body>
+    <header>
+        <div>class= "container">
+            <div> class="logo"</div>
+            <nav class="nav">
+                <ul class="nav-items">
+                    <li>this</li>
+                    <li>is</li>
+                    <li>just</li>
+                    <li>random</li>
+                </ul>
+            </nav>
+    </header>
     <section class="hero">
         <div class="intro" >
          <h1>welcome to my page</h1>
@@ -25,7 +37,18 @@
 
                 <h2>what's up its elijah</h2>
                 <p>ahhhhhhhhhhhhhhhhhhhhhhh</p>
-             
+                <ol class="no-list">
+                    <a href=""><li>first item</li></a>
+                    <li>second item</li>
+                    <ul>
+                        <li>first child</li>
+                        <li>second child</li>
+                    </ul>
+                </ol>
+             <ul>
+                <li>better than the rest</li>
+                <li>simply the best</li>
+             </ul>
             </div> 
         </section>
 
